rm redis jobstore, copy eveUniverseGraph to the docker image

--- a/theia.sv.conf
+++ b/theia.sv.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:theia]
-command=java -server -Xms64m -Xmx256m -XX:+AggressiveOpts -XX:+UseCompressedOops -Dorg.quartz.jobStore.host=redis -jar /red/theia.jar
+command=java -server -Xms64m -Xmx256m -XX:+AggressiveOpts -XX:+UseCompressedOops -jar /red/theia.jar
 redirect_stderr=true
 redirect_stdout=true
 stdout_logfile=/dev/stdout
