decrease pool size from 16 to 4, increase mem limit to 768m, fix a bug that causes division by 0 if ts delta <1 minute, move max dist to env var and change def to 25

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,6 +7,9 @@ theia {
 
   basePath = "v1"
   basePath = ${?THEIA_BASE_PATH}
+
+  maxDistance = 25
+  maxDistance = ${?THEIA_MAX_DISTANCE}
 }
 
 akka {
@@ -14,7 +17,7 @@ akka {
     type = Dispatcher
     executor = "thread-pool-executor"
     thread-pool-executor {
-      fixed-pool-size = 16
+      fixed-pool-size = 4
     }
     throughput = 100
   }
@@ -47,7 +50,7 @@ akka.http {
 
     # The time after which an idle connection will be automatically closed.
     # Set to `infinite` to completely disable idle connection timeouts.
-    idle-timeout = 20 s
+    idle-timeout = 60 s
     idle-timeout = ${?AKKA_IDLE_TIMEOUT}
 
     # Defines the default time period within which the application has to
@@ -60,7 +63,7 @@ akka.http {
     # `Timeout-Access` header to the request, which enables programmatic
     # customization of the timeout period and timeout response for each
     # request individually.
-    request-timeout = 20 s
+    request-timeout = 60 s
     request-timeout = ${?AKKA_REQUEST_TIMEOUT}
 
     # The maximum number of concurrently accepted connections when using the
